--- a/templates/common/navbar.html
+++ b/templates/common/navbar.html
@@ -20,19 +20,19 @@
                             {% if user.is_authenticated %}
                             <li>
                                 <!--Notification Dropdown-->
-                                {% include "common/navbar-account-notify.html" %}
+                                <!-- {% include "common/navbar-account-notify.html" %} -->
                                 <!--/Notification Dropdown-->
                             </li>
 
                             <li>
                                 <!--Messages Dropdown-->
-                                {% include "common/navbar-account-message.html" %}
+                                <!-- {% include "common/navbar-account-message.html" %} -->
                                 <!--/Messages Dropdown-->
                             </li>
-
+      
                             <li>
                                 <!--Tasks Dropdown-->
-                                {% include "common/navbar-account-task.html" %}
+                                <!-- {% include "common/navbar-account-task.html" %} -->
                                 <!--/Tasks Dropdown-->
                             </li>
 
