--- a/templates/manager/user_edit.html
+++ b/templates/manager/user_edit.html
@@ -20,15 +20,9 @@
                         </span>
                     </div>
                     <div class="form-group">
-                        {% if form.email.errors %}
-                        <div class="alert alert-warning fade in">
-                            <button class="close" data-dismiss="alert">×</button>
-                            <i class="fa-fw fa fa-warning"></i>
-                            <strong>警告</strong> {{ form.email.errors.as_text }}
-                        </div>
-                        {% endif %}
+                        
                         <span class="input-icon icon-right">
-                            {{ form.email }}
+                            <input class="form-control" id="id_email" maxlength="20" name="email" placeholder="邮箱" type="text" value="{{ user.email }}">
                             <i class="fa fa-envelope-o circular"></i>
                         </span>
                     </div>
@@ -39,35 +33,28 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.fullname.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.fullname.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.fullname }}
+                                    <input class="form-control" id="id_fullname" name="fullname" placeholder="姓名" type="text" value="{{ user.userprofile.fullname }}">
                                     <i class="fa fa-user"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group ">
-                                {% if form.gender.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.gender.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <div class="radio-inline">
-                                    {% for gender in form.gender %}
-                                    <label >
-                                        {{ gender.tag }}
-                                        <span class="text"> {{ gender.choice_label }} </span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    
+                                    <label>
+                                        <input class="form-control colored-blueberry" id="id_gender_0" name="gender" type="radio" value="M" {% if user.userprofile.gender == 'M' %} checked {% endif%}>
+                                        <span class="text"> 男 </span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                                     </label>
-                                    {% endfor %}
+                                    
+                                    <label>
+                                        <input class="form-control colored-blueberry" id="id_gender_1" name="gender" type="radio" value="F" {% if user.userprofile.gender == 'F' %} checked {% endif%}>
+                                        <span class="text"> 女 </span> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                                    </label>
+                                    
                                 </div>
                             </div>
                         </div>
@@ -76,60 +63,36 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.tel.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.tel.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.tel }}
+                                    <input class="form-control" id="id_tel" maxlength="20" name="tel" placeholder="电话" type="text" value="{{ user.userprofile.tel }}">
                                     <i class="glyphicon glyphicon-earphone"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.mobile.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.mobile.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.mobile }}
+                                    <input class="form-control" id="id_mobile" maxlength="20" name="mobile" placeholder="手机" type="text" value="{{ user.userprofile.mobile }}">
                                     <i class="glyphicon glyphicon-phone"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.address.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.address.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.address }}
+                                    <input class="form-control" id="id_address" maxlength="200" name="address" placeholder="通讯地址" type="text" value="{{ user.userprofile.address }}">
                                     <i class="glyphicon glyphicon-envelope"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.QQ.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.QQ.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.QQ }}
+                                    <input class="form-control" id="id_QQ" maxlength="20" name="QQ" placeholder="QQ" type="text" value="{{ user.userprofile.QQ }}">
                                     <i class="fa fa-rss-square"></i>
                                 </span>
                             </div>
@@ -140,47 +103,39 @@
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.position.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.position.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.position }}
+                                    <input class="form-control" id="id_position" maxlength="20" name="position" placeholder="所在地" type="text" value="{{ user.userprofile.position }}">
                                     <i class="fa fa-home"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group">
-                                {% if form.native.errors %}
-                                <div class="alert alert-warning fade in">
-                                    <button class="close" data-dismiss="alert">×</button>
-                                    <i class="fa-fw fa fa-warning"></i>
-                                    <strong>警告</strong> {{ form.native.errors.as_text }}
-                                </div>
-                                {% endif %}
+                                
                                 <span class="input-icon icon-right">
-                                    {{ form.native }}
+                                    <input class="form-control" id="id_native" maxlength="20" name="native" placeholder="籍贯" type="text" value="{{ user.userprofile.native}}">
                                     <i class="fa fa-globe"></i>
                                 </span>
                             </div>
                         </div>
                         <div class="col-xs-6">
-                            <label>
-                                <div class="form-group">
-                                    {{ form.is_active }}
-                                    <span class="text">激活用户</span>
-                                </div>
-                            </label>
+                            <div class="form-group">
+                                <label>
+                                    <input class="colored-success" id="id_is_active" name="is_active" type="checkbox" {% if user.is_active %} checked {% endif %} {% if user.id == 1%} disabled {% endif %}>
+                                    <span class="text">激活用户</span> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                                </label>
+                                <label>
+                                    <input class="colored-success" id="id_is_staff" name="is_staff" type="checkbox" {% if user.is_staff %} checked {% endif %} {% if user.id == 1%} disabled {% endif %}>
+                                    <span class="text">管理员</span>
+                                <label>
+                            </div>
                         </div>
                     </div>
 
                     <button type="submit" class="btn btn-blue">提交</button>
                  </form>
-             </div>
+            </div>
 
         </div>
 
