--- a/templates/manager/user_show.html
+++ b/templates/manager/user_show.html
@@ -73,7 +73,7 @@
                                 <td>{{ user.last_login |date:"Y-m-j G:i" }}</td>
                                 <td>
                                     <a href="{% url 'manager_user_edit' %}?id={{ user.id }}" class="btn btn-info btn-xs edit"><i class="fa fa-edit"></i>编辑</a>
-                                    <a href="{% url 'manager_user_del' %}?id={{ user.id }}" class="btn btn-danger btn-xs delete" {% if request.user.is_staff == False %} disabled {% endif %}"><i class="fa fa-trash-o"></i>删除</a>
+                                    <a href="{% url 'manager_user_del' %}?id={{ user.id }}" class="btn btn-danger btn-xs delete" {% if user.is_superuser == 1 %} disabled {% endif %}"><i class="fa fa-trash-o"></i>删除</a>
                                 </td>
                              </tr>
                             {% endfor %}
